--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "expo": "~51.0.38",
+    "expo-auth-session": "^5.5.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
